added css and html to the template

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,17 @@
   <link rel="shortcut icon" href="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Starter Snowpack App">
+  <link rel="stylesheet" type="text/css" href="/style.css">
   <title>Starter Snowpack App</title>
 </head>
 <body>
-  <h1>Welcome to Snowpack!</h1>
+  <div class="grid">
+    <header>Header</header>
+    <aside>Left Sidebar</aside>
+    <article>Article</article>
+    <aside>Right Sidebar</aside>
+    <footer>Footer</footer>
+  </div>
   <script type="module" defer src="/index.js"></script>
 </body>
 </html>
